--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/ludka",   "destination": "/ludka.html" },
+    { "source": "/prices",  "destination": "/prices.html" },
+    { "source": "/rpg",     "destination": "/rpg.html" },
+    { "source": "/shop",    "destination": "/shop.html" },
+    { "source": "/raffles", "destination": "/raffles.html" },
+
+    { "source": "/",        "destination": "/index.html" }
   ]
 }
