--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,33 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/ludka",   "destination": "/ludka.html" },
-    { "source": "/prices",  "destination": "/prices.html" },
-    { "source": "/rpg",     "destination": "/rpg.html" },
-    { "source": "/shop",    "destination": "/shop.html" },
-    { "source": "/raffles", "destination": "/raffles.html" },
-    { "source": "/",        "destination": "/index.html" }
+    {
+      "source": "/ludka",
+      "destination": "/ludka.html"
+    },
+    {
+      "source": "/prices",
+      "destination": "/prices.html"
+    },
+    {
+      "source": "/rpg",
+      "destination": "/rpg.html"
+    },
+    {
+      "source": "/shop",
+      "destination": "/shop.html"
+    },
+    {
+      "source": "/raffles",
+      "destination": "/raffles.html"
+    },
+    {
+      "source": "/dice",
+      "destination": "/dice.html"
+    },
+    {
+      "source": "/",
+      "destination": "/index.html"
+    }
   ]
 }
