Add nickname onboarding and profile endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -43,6 +43,10 @@
     {
       "source": "/cabinet",
       "destination": "/cabinet.html"
+    },
+    {
+      "source": "/nickname",
+      "destination": "/nickname.html"
     }
   ]
 }
