Align raffle ticket price and admin access

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,10 @@
       "destination": "/raffles.html"
     },
     {
+      "source": "/admin",
+      "destination": "/admin.html"
+    },
+    {
       "source": "/dice",
       "destination": "/dice.html"
     },
