--- a/logging-stack/loki-config.yaml
+++ b/logging-stack/loki-config.yaml
@@ -2,9 +2,10 @@ auth_enabled: false
 
 server:
   http_listen_port: 3100
-  log_level: info
+  grpc_listen_port: 9095
 
 common:
+  instance_addr: 0.0.0.0
   path_prefix: /loki
   storage:
     filesystem:
@@ -17,25 +18,29 @@ common:
 
 schema_config:
   configs:
-    - from: 2024-01-01
-      store: tsdb
+    - from: 2020-10-24
+      store: boltdb-shipper
       object_store: filesystem
-      schema: v13
+      schema: v11
       index:
         prefix: index_
         period: 24h
 
-limits_config:
-  max_streams_per_user: 50000
-  retention_period: 7d
-  ingestion_rate_mb: 8
-  ingestion_burst_size_mb: 16
-
-compactor:
-  working_directory: /loki/compactor
-  shared_store: filesystem
-  compaction_interval: 10m
-  retention_enabled: true
+storage_config:
+  boltdb_shipper:
+    active_index_directory: /loki/index
+    cache_location: /loki/boltdb-cache
+    shared_store: filesystem
+  filesystem:
+    directory: /loki/chunks
 
 ruler:
-  alertmanager_url: http://localhost:9093
+  alertmanager_url: ""
+  ring:
+    kvstore:
+      store: inmemory
+  storage:
+    type: local
+    local:
+      directory: /loki/rules
+  rule_path: /loki/rules-temp
