--- a/logging-stack/promtail-config.yaml
+++ b/logging-stack/promtail-config.yaml
@@ -9,7 +9,19 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: journal-firstgamble
+  # 1) NGINX
+  - job_name: nginx
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: firstgamble
+          env: prod
+          service: nginx
+          __path__: /var/log/nginx/*.log
+
+  # 2) JOURNALD (systemd) — API, бот и всё остальное
+  - job_name: journald
     journal:
       path: /var/log/journal
       max_age: 12h
@@ -17,36 +29,16 @@ scrape_configs:
         job: firstgamble
         env: prod
     relabel_configs:
-      - source_labels: ['__journal__systemd_unit']
-        target_label: 'service'
       - source_labels: ['__journal__hostname']
-        target_label: 'host'
-    pipeline_stages:
-      - match:
-          selector: '{__journal__systemd_unit="firstgamble-api.service"}'
-          stages:
-            - regex:
-                expression: '(?P<message>.*)'
-            - labels:
-                service: firstgamble-api
-            - output:
-                source: message
-      - match:
-          selector: '{__journal__systemd_unit="firstgamble-bot.service"}'
-          stages:
-            - regex:
-                expression: '(?P<message>.*)'
-            - labels:
-                service: firstgamble-bot
-            - output:
-                source: message
+        target_label: host
 
-  - job_name: nginx-logs
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: firstgamble
-          service: nginx
-          env: prod
-          __path__: /var/log/nginx/*.log
+      - source_labels: ['__journal__systemd_unit']
+        target_label: unit
+
+      - source_labels: ['__journal__syslog_identifier']
+        target_label: service
+
+      # отсекаем шум systemd, если не нужен
+      - source_labels: ['unit']
+        regex: 'systemd.*'
+        action: drop
