Fix RPG routing and persist state via API

--- a/vercel.json
+++ b/vercel.json
@@ -90,7 +90,7 @@
     },
     {
       "source": "/rpg",
-      "destination": "/minigames/minigames.html"
+      "destination": "/minigames/rpg.html"
     }
   ]
 }
