Extend RPG resources and separate shop page

--- a/vercel.json
+++ b/vercel.json
@@ -91,6 +91,10 @@
     {
       "source": "/rpg",
       "destination": "/minigames/rpg.html"
+    },
+    {
+      "source": "/rpg-shop",
+      "destination": "/minigames/rpg_shop.html"
     }
   ]
 }
